--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,18 @@
-/* Styling for the entire app */
-.App {
-  text-align: center;
+@media screen and (max-width: 400px) {
+  #features {
+    padding: 20px;
+    width: 111%;
+  }
+  #about,
+  #services,
+  #testimonials,
+  #team,
+  #contact,
+  #footer {
+    width: 111%;
+  }
+
+  #portfolio {
+    width: 110%;
+  }
 }
-
-
-/* Main content wrapper */
-.main-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-/* Styling for the "See All" buttons */
-.see-all-button {
-  margin: 20px 0;
-  padding: 10px 20px;
-  background-color: #01796F;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.see-all-button:hover {
-  background-color: #005f57;
-}
-
-/* Featured Sections */
-.featured-section {
-  margin-bottom: 40px; 
-}
-
-.featured-section h2 {
-  margin-bottom: 20px;
-}
-
